init: delete computer handler
