# docs/swagger.yaml
@@ -176,7 +176,41 @@ info:
   title: API Computer-club
   version: "1.0"
 paths:
-  /computers/status:
+  /computers:
+    delete:
+      description: Удаляет компьютер из базы данных (доступно только для администраторов)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ': "Компьютер успешно удален'
+          schema:
+            type: string
+        "400":
+          description: Некорректный ID компьютера
+          schema:
+            type: string
+        "403":
+          description: Ошибка доступа - недостаточно прав
+          schema:
+            type: string
+        "404":
+          description: Компьютер не найден
+          schema:
+            type: string
+        "409":
+          description: Компьютер занят
+          schema:
+            type: string
+        "500":
+          description: Внутренняя ошибка сервера
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Удаляет компьютер
+      tags:
+      - computers
     get:
       description: Возвращает список всех компьютеров и их статусы (доступно только
         для администраторов)
