# internal/delivery/httpService/routes.go
@@ -35,5 +35,6 @@ func RegisterRoutes(
 		protected.Post("/session/end", sessionHandler.EndSession)
 		protected.Put("/pay", walletHandler.PutMoneyOnWallet)
 		protected.Get("/computers", computerHandler.GetComputersStatus)
+		protected.Delete("/computers/{id}", computerHandler.DeleteComputer)
 	})
 }
