# internal/handlers/computer.go
@@ -6,12 +6,15 @@ import (
 	"computer-club/internal/usecase"
 	"computer-club/pkg/errors"
 	"encoding/json"
+	"github.com/go-chi/chi/v5"
 	"github.com/sirupsen/logrus"
 	"net/http"
+	"strconv"
 )
 
 type ComputerHandler interface {
 	GetComputersStatus(w http.ResponseWriter, r *http.Request)
+	DeleteComputer(w http.ResponseWriter, r *http.Request)
 }
 
 type computerHandler struct {
@@ -35,7 +38,7 @@ func NewComputerHandler(computerService usecase.ComputerService, log *logrus.Log
 // @Success      200 {array} models.Computer "Успешный ответ"
 // @Failure      403 {object} string "Ошибка доступа - недостаточно прав"
 // @Failure      500 {object} string "Внутренняя ошибка сервера"
-// @Router       /computers/status [get]
+// @Router       /computers [get]
 func (h computerHandler) GetComputersStatus(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	h.log.Info("Запрос на получение статуса компьютеров")
@@ -60,6 +63,60 @@ func (h computerHandler) GetComputersStatus(w http.ResponseWriter, r *http.Reque
 	w.WriteHeader(http.StatusOK)
 
 	if err := json.NewEncoder(w).Encode(computers); err != nil {
+		h.log.WithError(err).Error("Ошибка при кодировании ответа JSON")
+		middleware.WriteError(w, http.StatusInternalServerError, errors.ErrCodingaData.Error())
+	}
+}
+
+// DeleteComputer godoc
+// @Summary      Удаляет компьютер
+// @Description  Удаляет компьютер из базы данных (доступно только для администраторов)
+// @Tags         computers
+// @Produce      json
+// @Security     BearerAuth
+// @Success      200  string message": "Компьютер успешно удален
+// @Failure		 400 {object} string "Некорректный ID компьютера"
+// @Failure      403 {object} string "Ошибка доступа - недостаточно прав"
+// @Failure		 404 {object} string "Компьютер не найден"
+// @Failure		 409 {object} string "Компьютер занят"
+// @Failure      500 {object} string "Внутренняя ошибка сервера"
+// @Router       /computers [delete]
+func (h computerHandler) DeleteComputer(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	role, ok := ctx.Value("role").(string)
+	if !ok || role != string(models.Admin) {
+		h.log.WithError(errors.ErrForbidden).Error("Ошибка при удалении компьютера: недостаточно прав")
+		middleware.WriteError(w, http.StatusForbidden, errors.ErrForbidden.Error())
+		return
+	}
+
+	idStr := chi.URLParam(r, "id")
+
+	id, err := strconv.ParseInt(idStr, 10, 64)
+	if err != nil {
+		h.log.WithError(err).Error("Некорректный ID компьютера")
+		middleware.WriteError(w, http.StatusBadRequest, errors.ErrInvalidTariffID.Error())
+		return
+	}
+
+	err = h.computerService.DeleteComputer(ctx, int(id))
+	if err != nil {
+		switch err {
+		case errors.ErrFindComputer:
+			middleware.WriteError(w, http.StatusNotFound, errors.ErrFindComputer.Error())
+		case errors.ErrDeleteComputer:
+			middleware.WriteError(w, http.StatusInternalServerError, errors.ErrDeleteComputer.Error())
+		case errors.ErrPCBusy:
+			middleware.WriteError(w, http.StatusConflict, errors.ErrPCBusy.Error())
+		default:
+			middleware.WriteError(w, http.StatusInternalServerError, err.Error())
+		}
+		h.log.WithError(err).Error("Ошибка удаления компьютера")
+		return
+	}
+	w.WriteHeader(http.StatusOK)
+
+	if err := json.NewEncoder(w).Encode(map[string]string{"message": "Компьютер успешно удален"}); err != nil {
 		h.log.WithError(err).Error("Ошибка при кодировании ответа JSON")
 		middleware.WriteError(w, http.StatusInternalServerError, errors.ErrCodingaData.Error())
 	}
